--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -93,14 +93,24 @@
 
 
 \title{The Determinant and Arc Indices of \\ $\theta$-Curves and Handcuff-Graphs}
-\author{\centerline{
+\author{
+	\centerline{
 	Eunchan Cho\inst{1} \and
 	Jeongwon Shin\inst{1} \and
 	Boyeon Seo\inst{1} \and
-	Minho Choi\inst{1}}}
-\institute[]{
-	\inst{1} Korea Science Academy of KAIST
+	Minho Choi\inst{1}
+	}\\
+	\centerline{
+		Supervisor: Hun Kim\inst{1} \hspace{0.5cm}
+		GyoTaek Jin\inst{2}
+	}
 }
+\institute[]{
+	\raggedright
+    \inst{1} Korea Science Academy of KAIST \\
+    \inst{2} Department of Mathematical Sciences, Korea Advanced Institute of Science and Technology
+}
+
 \date{
 	\begin{flushright}
 		NOV 22, 2025\\
@@ -124,11 +134,11 @@
 \include{Result.tex}
 \include{Further Research.tex}
 
-\begin{frame}[standout,plain]
-	\TINY
-	\bibliographystyle{apalike}
-	\nocite{*}
-	\bibliography{reference}
-\end{frame}
+% \begin{frame}[standout,plain]
+% 	\TINY
+% 	\bibliographystyle{apalike}
+% 	\nocite{*}
+% 	\bibliography{reference}
+% \end{frame}
 
 \end{document}
