--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -69,7 +69,7 @@
 \end{frame}
 
 
-\begin{frame}{Lower Bounds from Yamada Polynomial}
+\begin{frame}{Lower Bound from Yamada Polynomial}
 	\begin{thm}
 	Let $T$ be any $\theta$-curve or handcuff graph.
 	Then
@@ -81,7 +81,7 @@
 \end{frame}
 
 
-\begin{frame}{Lower Bounds from Yamada Polynomial}
+\begin{frame}{Lower Bound from Yamada Polynomial}
 	\begin{prop}
 		Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph $T$ \myem{without nested caps}.
 		Then
