--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -1,9 +1,8 @@
-\section{Determinant of $\theta$-curve
-and Handcuff graph}
-\begin{frame}{THC-cromwell matrix}
+\section{Determinants of $\theta$-Curves and Handcuff Graphs}
+\begin{frame}{THC-Cromwell matrix}
 	\begin{itemize}
 		\item The \term{Cromwell Matrix} of a knot is an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s.
-		\item The \term{THC-cromwell matrix} is an expansion of cromwell matrix into $\theta$-curves and handcuff graphs.
+		\item The \term{THC-Cromwell matrix} is an expansion of Cromwell matrix into $\theta$-curves and handcuff graphs.
 	\end{itemize}
 	\vspace{1cm}
 	\begin{tabu}{X[5c]X[5c]X[c]X[5c]}
@@ -21,9 +20,9 @@ and Handcuff graph}
 	
 \end{frame}
 
-\begin{frame}{Determinants of the cromwell matrices of Knot}
+\begin{frame}{Determinants of the Cromwell matrices of Knot}
 	\begin{thm}
-		Let $K$ be a knot. Then the determinant of a cromwell matrix of $K$ is $0$ or $\pm 2$.
+		Let $K$ be a knot. Then the determinant of a Cromwell matrix of $K$ is $0$ or $\pm 2$.
 	\end{thm}
 	\mypf
 	\begin{tabu}{X[5c]X[c]X[5c]X[c]X[5c]}
@@ -61,11 +60,11 @@ and Handcuff graph}
 
 	
 \end{frame}
-\begin{frame}{H-deletion of THC-cromwell matricies}
+\begin{frame}{H-deletion of THC-Cromwell matricies}
 	\begin{itemize}
-		\item The \term{vertex-row} of THC-cromwell matrix $M$ is a row which contains three 1s, $M_{ia},M_{ib},M_{ic}$, where $a<b<c$, as its elements.
-		\item The \term{side-column} of THC-cromwell matrix $M$ is a column which contains the leftmost 1 of vertex-row $(M_{ia})$ or the rightmost 1 of vertex row $(M_{ic})$.
-		\item The \term{H-deletion} Matrix of the THC-cromwell
+		\item The \term{vertex-row} of THC-Cromwell matrix $M$ is a row which contains three 1s, $M_{ia},M_{ib},M_{ic}$, where $a<b<c$, as its elements.
+		\item The \term{side-column} of THC-Cromwell matrix $M$ is a column which contains the leftmost 1 of vertex-row $(M_{ia})$ or the rightmost 1 of vertex row $(M_{ic})$.
+		\item The \term{H-deletion} Matrix of the THC-Cromwell
  		matrix G is $(n-1)\times(n-1)$ matrix\\ which deleted vertex-row and its two side-columns from the 
  		matrix G.
 	\end{itemize}
@@ -90,9 +89,9 @@ and Handcuff graph}
 	
 \end{frame}
 
-\begin{frame}{Determinants of the THC-cromwell matrices}
+\begin{frame}{Determinants of the THC-Cromwell matrices}
 	\begin{thm}
-		Let $M$ be a THC-cromwell matrice of $\theta$-curve or handcuff graph. \\
+		Let $M$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph. \\
 		\begin{itemize}
 			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
 			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
