--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -326,6 +326,12 @@
       \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.
       
     \end{enumerate}
+
+	\TINY
+	\bibliographystyle{apalike}
+	\nocite{*}
+	\bibliography{reference}
+
   \end{block}
 
 \end{columns}
