--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -336,577 +336,7 @@
 
 \end{columns}
 
-% \vspace{2cm}
- \begin{alertblock}{Grid Diagrams of the $\theta$-Curves and Handcuff Graphs}
-  \begin{columns}[t]
-  \begin{column}{0.6\textwidth}
-  \begin{alertblock}{Theta-Curves}
-  \begin{figure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=2cm]{../Final_Poster/grid_diagram/theta_3_1.png}
-    \caption{$3_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_4_1.png}
-    \caption{$4_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_1.png}
-    \caption{$5_1$}
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_2.png}
-    \caption{$5_2$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_3.png}
-    \caption{$5_3$}
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_4.png}
-    \caption{$5_4$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_5.png}
-    \caption{$5_5$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_6.png}
-    \caption{$5_6$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_5_7.png}
-    \caption{$5_7$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_1.png}
-    \caption{$6_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_2.png}
-    \caption{$6_2$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_3.png}
-    \caption{$6_3$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_4.png}
-    \caption{$6_4$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_5.png}
-    \caption{$6_5$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_6.png}
-    \caption{$6_6$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_7.png}
-    \caption{$6_7$} 
-    \end{subfigure}
-      \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_8.png}
-    \caption{$6_8$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_9.png}
-    \caption{$6_9$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_10.png}
-    \caption{$6_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_11.png}
-    \caption{$6_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_12.png}
-    \caption{$6_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_13.png}
-    \caption{$6_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_14.png}
-    \caption{$6_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_15.png}
-    \caption{$6_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_6_16.png}
-    \caption{$6_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_1.png}
-    \caption{$7_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_2.png}
-    \caption{$7_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_3.png}
-    \caption{$7_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_4.png}
-    \caption{$7_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_5.png}
-    \caption{$7_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_6.png}
-    \caption{$7_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_7.png}
-    \caption{$7_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_8.png}
-    \caption{$7_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_9.png}
-    \caption{$7_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_10.png}
-    \caption{$7_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_11.png}
-    \caption{$7_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_12.png}
-    \caption{$7_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_13.png}
-    \caption{$7_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_14.png}
-    \caption{$7_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_15.png}
-    \caption{$7_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_16.png}
-    \caption{$7_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_17.png}
-    \caption{$7_{17}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_18.png}
-    \caption{$7_{18}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_19.png}
-    \caption{$7_{19}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_20.png}
-    \caption{$7_{20}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_21.png}
-    \caption{$7_{21}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_22.png}
-    \caption{$7_{22}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_23.png}
-    \caption{$7_{23}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_24.png}
-    \caption{$7_{24}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_25.png}
-    \caption{$7_{25}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_26.png}
-    \caption{$7_{26}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_27.png}
-    \caption{$7_{27}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_28.png}
-    \caption{$7_{28}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_29.png}
-    \caption{$7_{29}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_30.png}
-    \caption{$7_{30}$}
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_31.png}
-    \caption{$7_{31}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_32.png}
-    \caption{$7_{32}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_33.png}
-    \caption{$7_{33}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_34.png}
-    \caption{$7_{34}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_35.png}
-    \caption{$7_{35}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_36.png}
-    \caption{$7_{36}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_37.png}
-    \caption{$7_{37}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_38.png}
-    \caption{$7_{38}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_39.png}
-    \caption{$7_{39}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_40.png}
-    \caption{$7_{40}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_41.png}
-    \caption{$7_{41}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_42.png}
-    \caption{$7_{42}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_43.png}
-    \caption{$7_{43}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_44.png}
-    \caption{$7_{44}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_45.png}
-    \caption{$7_{45}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_46.png}
-    \caption{$7_{46}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_47.png}
-    \caption{$7_{47}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_48.png}
-    \caption{$7_{48}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_49.png}
-    \caption{$7_{49}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_50.png}
-    \caption{$7_{50}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_51.png}
-    \caption{$7_{51}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_52.png}
-    \caption{$7_{52}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_53.png}
-    \caption{$7_{53}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_54.png}
-    \caption{$7_{54}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_55.png}
-    \caption{$7_{55}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_56.png}
-    \caption{$7_{56}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_57.png}
-    \caption{$7_{57}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_58.png}
-    \caption{$7_{58}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_59.png}
-    \caption{$7_{59}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_60.png}
-    \caption{$7_{60}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_61.png}
-    \caption{$7_{61}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_62.png}
-    \caption{$7_{62}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_63.png}
-    \caption{$7_{63}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_64.png}
-    \caption{$7_{64}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.05\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/theta_7_65.png}
-    \caption{$7_{65}$} 
-    \end{subfigure}
-  \end{figure}
-
-
-  \end{alertblock}
-\end{column}
-\begin{column}{0.3\textwidth}
-  \begin{alertblock}{Handcuff Graphs}
-  \begin{figure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_2_1.png}
-    \caption{$2_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_4_1.png}
-    \caption{$4_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_5_1.png}
-    \caption{$5_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_1.png}
-    \caption{$6_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_2.png}
-    \caption{$6_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_3.png}
-    \caption{$6_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_4.png}
-    \caption{$6_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_5.png}
-    \caption{$6_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_6.png}
-    \caption{$6_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_7.png}
-    \caption{$6_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_8.png}
-    \caption{$6_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_6_9.png}
-    \caption{$6_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_1.png}
-    \caption{$7_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_2.png}
-    \caption{$7_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_3.png}
-    \caption{$7_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_4.png}
-    \caption{$7_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_5.png}
-    \caption{$7_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_6.png}
-    \caption{$7_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_7.png}
-    \caption{$7_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_8.png}
-    \caption{$7_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_9.png}
-    \caption{$7_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_10.png}
-    \caption{$7_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_11.png}
-    \caption{$7_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_12.png}
-    \caption{$7_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_13.png}
-    \caption{$7_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_14.png}
-    \caption{$7_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_15.png}
-    \caption{$7_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_16.png}
-    \caption{$7_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_17.png}
-    \caption{$7_{17}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_18.png}
-    \caption{$7_{18}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_19.png}
-    \caption{$7_{19}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_20.png}
-    \caption{$7_{20}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_21.png}
-    \caption{$7_{21}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_22.png}
-    \caption{$7_{22}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_23.png}
-    \caption{$7_{23}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_24.png}
-    \caption{$7_{24}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_25.png}
-    \caption{$7_{25}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_26.png}
-    \caption{$7_{26}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_27.png}
-    \caption{$7_{27}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_28.png}
-    \caption{$7_{28}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_29.png}
-    \caption{$7_{29}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_30.png}
-    \caption{$7_{30}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_31.png}
-    \caption{$7_{31}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_32.png}
-    \caption{$7_{32}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_33.png}
-    \caption{$7_{33}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_34.png}
-    \caption{$7_{34}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_35.png}
-    \caption{$7_{35}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.1\textwidth}
-    \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_36.png}
-    \caption{$7_{36}$} 
-    \end{subfigure}
-  \end{figure}
-  \end{alertblock}
-  \end{column}
-  \end{columns}
-  \end{alertblock}
+\include{grid}
 
 \end{frame}
 
