--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -128,15 +128,14 @@
       \begin{figure}[h]
       \centering
       \includegraphics[width=0.8\textwidth]{figure/theta_exe.png}
-      \caption{$\theta$-Curves}
       \end{figure}
       \item \textbf{Handcuff graph}
       \begin{figure}[h]
       \centering
       \includegraphics[width=0.8\textwidth]{figure/handcufflist.png}
-      \caption{Handcuff graphs}
       \end{figure}
     \end{itemize}
+    \vspace*{-1.5cm}
   \end{block}
 
   \begin{block}{Diagrams}
@@ -144,17 +143,17 @@
     \begin{itemize} 
       \item \textbf{Grid diagram}
       \item \textbf{Arc presentation}
+      \vspace*{-2cm}
+      \begin{figure}[h]
+        \centering
+        \begin{tabular}{cc}
+          \includegraphics[width=0.7\textwidth]{figure/grid_diagram_1.png} &
+          \includegraphics[width=0.25\textwidth]{figure/grid_diagram_2.png} \\
+        \end{tabular}        
+      \end{figure}
       \item \textbf{Arc index} : The minimal number of pages among all possible arc presentations of K.
+    \vspace*{-1cm}
     \end{itemize}
-
-    \begin{figure}[h]
-      \centering
-      \begin{tabular}{cc}
-        \includegraphics[width=0.7\textwidth]{figure/grid_diagram_1.png} &
-        \includegraphics[width=0.25\textwidth]{figure/grid_diagram_2.png} \\
-      \end{tabular}        
-      \caption{Grid diagram and Arc Presentation of Trefoil}
-    \end{figure}
   \end{block}
     
 
@@ -254,7 +253,7 @@
   \end{block}
   
   \begin{block}{Bounds of Arc Index}
-  $\mathbf{Theorem\ 3.}$ $[$3$]$ For any spatial graph $G$, 
+  $\mathbf{Theorem\ 3.}$ $[$2$]$ For any spatial graph $G$, 
   \begin{equation*}
     \alpha(H) \leq c(H) + e + b
   \end{equation*}
@@ -319,9 +318,8 @@
 
   \begin{block}{References}
     \begin{enumerate}
-      \item Yoonsang Lee. (2023). \textit{A Study on Arc Index of Theta-Curves}. Korea Science Academy of KAIST
-      %\item Lee, H. J., Hong, K., Lee, H., \& Oh, S. (2014). Mosaic number of knots. \textit{Journal of Knot Theory and Its Ramifications, 23}(13), 1450069.
-      \item (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
+      \item Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
+      \item Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
       \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
       \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.
       
