--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -1,6 +1,6 @@
 \section{Lower Bounds of Arc Index}
 
-\begin{frame}{Lower Bounds from Constituent Knots/Links}
+\begin{frame}{Lower Bound from Constituent Knots/Links}
 	\begin{thm}
 		Let $T$ be any $\theta$-curve
 		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
@@ -20,7 +20,7 @@
 	\end{thm}
 \end{frame}
 
-\begin{frame}{Lower Bounds from Constituent Knots/Links}
+\begin{frame}{Lower Bound from Constituent Knots/Links}
 	\bigskip
 	\begin{thm}
 		Let $H$ be any handcuff graph, and $L$ be the constituent link of $H$.
