--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -2,7 +2,13 @@
 
 \begin{frame}{Upper Bounds of Arc Index}
 	\begin{thm}
+		Let $G$ be any spatial graph. Then,
+        \[ \alpha(G) \le c(G) + e + b \]
+		where $e, b$ are the number of edges and bouquet cut.
+	\end{thm}
+
+	\begin{corollary}
 		Let $T$ be any non-trivial prime $\theta$-curve or handcuff graph. Then,
         \[ \alpha(T) \le c(T) + 3. \]
-	\end{thm}
+	\end{corollary}
 \end{frame}
