--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -307,6 +307,9 @@
      \[ \mathrm{spr}(R(S_T)) \leq c+2n \]
      where $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. 
 
+    $\mathbf{Theorem\ 5.}$ Let $T$ be a $\theta$-curve or handcuff graph. Then,
+     \[ \alpha(T) \ge 2 + \sqrt{\mathrm{spr}(R(S_T)) - 4}. \]
+
   \end{block}
 
   \begin{block}{Further Studies}
