--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -311,24 +311,24 @@
 
   \begin{block}{Further Studies}
     \begin{itemize}
-      \item Fixing every arc index of handcuff graph and $\theta$-curve graph under $7$ crossings.
-      \item Applying bounds of spatial graphs to knots.
+      \item Using another tool to completely determine the arc indices of $\theta$-curves and handcuff graphs, such as Yamada package.
+      \item Applying the result of our research to $\theta$-curves or handcuff graphs of higher crossings or to other spatial graphs.
     \end{itemize}
   \end{block}
 
   \begin{block}{References}
+{\small
     \begin{enumerate}
-      \item Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
-      \item Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
-      \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
-      \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.
-      
+      \item[[1]] Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
+      \item[[2]] Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
+      \item[[3]] Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
+      \item[[4]] Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.      
     \end{enumerate}
-
-	\TINY
-	\bibliographystyle{apalike}
-	\nocite{*}
-	\bibliography{reference}
+}
+	% \TINY
+	% \bibliographystyle{apalike}
+	% \nocite{*}
+	% \bibliography{reference}
 
   \end{block}
 
