--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -236,7 +236,7 @@
     \includegraphics[width=0.21\textwidth]{figure/matrix8.png} &
     \includegraphics[width=0.22\textwidth]{figure/matrix9.png} \\
   \end{tabular}
-  \caption{Determinant of a $\thata$-curve : Line-shap and T-shape}
+  \caption{Determinant of a $\theta$-curve : Line-shape and T-shape}
   \end{figure}
 
   \begin{figure}[h]
@@ -322,10 +322,10 @@
   \begin{block}{References}
 {\small
     \begin{enumerate}
-      \item[[1]] Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
-      \item[[2]] Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
-      \item[[3]] Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
-      \item[[4]] Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.      
+      \item[1] Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
+      \item[2] Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
+      \item[3] Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
+      \item[4] Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.      
     \end{enumerate}
 }
 	% \TINY
