--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -299,7 +299,8 @@
 
     $\mathbf{Definition\ 1.}$ $[$5$]$ For a graph $G$, let
     \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)} \]
-    where $\mu(G)$, $\beta(G)$, and $E$ are the number of connected components, the first Betti number, and the edge set of $G$ respectively. Then, the \textbf{Yamada polynomial} of $G$, $R(G)$, is defined by
+    where $\mu(G)$, $\beta(G)$, and $E$ are the number of connected components, the first Betti number, and the edge set of $G$ respectively. \\
+    \textbf{Yamada polynomial} of $G$, $R(G)$, is defined by
     \[ R(G)(x) = h(G)(-1, -x-2-x^{-1}). \]
     
     $\mathbf{Theorem\ 4.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph, and $c, n$ be the number of caps and crossings in $S_T$, respectively. Then,
