--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -292,22 +292,22 @@
   \column{0.33\textwidth}
   \begin{block}
     
-    $\mathbf{Theorem\ 3.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
+    $\mathbf{Theorem\ 5.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
   \begin{equation*}
     \alpha(H) \geq c(L) + 3
   \end{equation*}
 
-    $\mathbf{Definition\ 1.}$ $[$5$]$ For a graph $G$, let
+    $\mathbf{Definition\ 6.}$ $[$4$]$ For a graph $G$, let
     \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)} \]
     where $\mu(G)$, $\beta(G)$, and $E$ are the number of connected components, the first Betti number, and the edge set of $G$ each. Therefore, the \\
     \textbf{Yamada polynomial} of $G$, $R(G)$, is defined by
     \[ R(G)(x) = h(G)(-1, -x-2-x^{-1}). \]
     
-    $\mathbf{Theorem\ 4.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph, and let $c, n$ be the number of caps and crossings in $S_T$, respectively. Then,
+    $\mathbf{Theorem\ 7.}$ Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph, and let $c, n$ be the number of caps and crossings in $S_T$, respectively. Then,
      \[ \mathrm{spr}(R(S_T)) \leq c+2n \]
      where $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. 
 
-    $\mathbf{Theorem\ 5.}$ Let $T$ be a $\theta$-curve or handcuff graph. Then,
+    $\mathbf{Theorem\ 8.}$ Let $T$ be a $\theta$-curve or handcuff graph. Then,
      \[ \alpha(T) \ge 2 + \sqrt{\mathrm{spr}(R(S_T)) - 4}. \]
 
   \end{block}
