--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -203,7 +203,7 @@
   %   \end{itemize}
   % \end{block}
   \begin{block}{}
-  $\mathbf{Theorem\ 1.}$ Let $K$ be a knot. Then the determinant of a cromwell matrix of $K$ is $0$ or $\pm 2$.
+  $\mathbf{Theorem\ 1.}$ Let $K$ be a knot. Then the determinant of a Cromwell matrix of $K$ is $0$ or $\pm 2$.
   \begin{figure}[h]
     \centering
     \begin{tabular}{cccc}
@@ -212,9 +212,9 @@
       \includegraphics[width=0.24\textwidth]{figure/matrix2.png} &
       \includegraphics[width=0.24\textwidth]{figure/matrix3.png} \\
     \end{tabular}        
-    \caption{Determinant of a cromwell matrix of Trefoil}
+    \caption{Determinant of a Cromwell matrix of Trefoil}
   \end{figure}
-  $\mathbf{Theorem\ 2.}$ Let $M$ be a THC-cromwell matrice of $\theta$-curve or handcuff graph, and let det*($M$) be the determinant of H-deletion matrix of $M$. Then, \\
+  $\mathbf{Theorem\ 2.}$ Let $M$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph, and let det*($M$) be the determinant of H-deletion matrix of $M$. Then, \\
 		\begin{itemize}
 			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
 			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
